# Track-Anything

./: .gitignore  checkpoints.py  download_checkpoints.py  download_checkpoints.sh  infer_track_segment  infer_track_segment.py  model.py  pyproject.toml  requirements.txt  track_anything.py  utils.py
test_sample/: test_input.json
tracker/inference/: inference_core.py  memory_manager.py
tracker/model/: trainer.py
