[tool.poetry]
name = "track-anything"
version = "0.1.0"
description = "Initial poetry version for version maintenance"
authors = ["shivin101 <shivin.yadav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
