[tool.poetry]
name = "track-anything"
version = "0.1.0"
description = "Dependency file for the current version of track anything packaged for morphic"
authors = ["shivin101 <shivin.yadav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
