[tool.poetry]
name = "track-anything"
version = "0.1.0"
description = "Dependency file for the current version of track anything packaged for morphic"
authors = ["shivin101 <shivin.yadav@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "tracker" },
    { include = "model", from="tracker" },
    { include = "", from="orange_tree" },
]

[tool.poetry.dependencies]
python = "^3.9"
progressbar2 = "^4.3.2"
gdown = "^4.7.3"
gitpython = "^3.1.41"
thinplate = {git = "https://github.com/cheind/py-thin-plate-spline"}
hickle = "^5.0.2"
tensorboard = "^2.15.1"
numpy = "^1.26.3"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
gradio = "^4.15.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
pyyaml = "^6.0.1"
av = "^11.0.0"
openmim = "^0.3.9"
tqdm = "^4.66.1"
psutil = "^5.9.7"
mmcv-full = "^1.7.2"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
